# zig-game-engine-project

./: .gitignore  AndroidManifest.xml  README.md  __android.zig  __system.zig  __vulkan.zig  __vulkan_allocator.zig  __windows.zig  asset_file.zig  build.zig  compile.bat  debug.keystore  engine.zig  file.zig  font.zig  geometry.zig  graphics.zig  img.zig  input.zig  main.zig  main_console.zig  main_input.zig  main_shape2d.zig  main_sound.zig  math.zig  matrix_.zig  mem.zig  shader.vert  shader_compile.bat  sound.zig  system.zig  timer_callback.zig  timezones.zig  webp.zig  window.zig  xfit.zig
assets/: BG.opus  test.lua
engine/: AndroidManifest.xml  __android.zig  __raw_input.zig  __render_command.zig  __system.zig  __vulkan.zig  __vulkan_allocator.zig  __windows.zig  animator.zig  asset_file.zig  collision.zig  compile.bat  components.zig  datetime.zig  engine.zig  file.zig  font.zig  general_input.zig  geometry.zig  graphics.zig  image_util.zig  img.zig  input.zig  lua.zig  math.zig  mem.zig  raw_input.zig  render_command.zig  shader_compile.bat  sound.zig  system.zig  timer_callback.zig  webp.zig  window.zig  xbox_pad_input.zig  xfit.zig
engine/include/: android.zig  freetype.zig  vulkan.zig  windows.zig
engine/lib/: CMakeLists.txt
engine/shaders/: animate_tex.frag  quad_shape.frag  quad_shape.vert  screen_copy.frag  shape.frag  shape.vert  shape_curve.frag  shape_curve.vert  tex.frag  tex.vert
include/: vulkan.zig  windows.zig
include/opusfile/: link.txt  (+1 more)
lib/: miniaudio.c  opus_aarch64.lib  opus_x86_64.lib  vulkan.lib
shaders/: shape.frag  shape.vert
(+16 files in other folders)
